fix css on iPhone

--- a/g1/news.css
+++ b/g1/news.css
@@ -20,7 +20,7 @@ h1										{ padding:20px; }
 .none h1							{ color:black; }
 li a									{ color:#666; text-decoration:none; }
 li a:hover						{ text-decoration:underline; }
-header								{ position:absolute; top:0px; background-color:black; color:white; width:100%; }
+header								{ position:absolute; top:0px; background-color:black; color:white; width:100%; height:1em; overflow:hidden; white-space: nowrap; text-overflow: ellipsis; }
 footer								{ position:absolute; bottom:0px; background-color:LightGray; color:DarkGray; width:100%; }
 header, footer				{ padding:5px; background:#F1F1F1; color:#666; }
 .world-news h1				{ border-left:5px solid red; }
